hphp/hack/test/typecheck/readonly/as_mut_union_tuple.php.exp
File "as_mut_union_tuple.php", line 16, characters 3-20:
Only value types and arrays can be converted to mutable. (Typing[4434])
